deploy: 6c4fa880a65eb483435776c6bd903925723ce51a

--- a/ch01-00-getting-started.html
+++ b/ch01-00-getting-started.html
@@ -167,14 +167,18 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#getting-started" id="getting-started">Getting Started</a></h1>
-<p>Let’s start your Rust journey! There’s a lot to learn, but every journey starts
-somewhere. In this chapter, we’ll discuss:</p>
+                        <h1><a class="header" href="#開始入門" id="開始入門">開始入門</a></h1>
+<p>讓我們開始你的 Rust 旅途吧！千里之行始於足下，在此章節我們將討論：</p>
 <ul>
-<li>Installing Rust on Linux, macOS, and Windows</li>
-<li>Writing a program that prints <code>Hello, world!</code></li>
-<li>Using <code>cargo</code>, Rust’s package manager and build system</li>
+<li>在 Linex、macOS 和 Windows 上安裝 Rust</li>
+<li>寫一支印出 <code>Hello, world!</code> 的程式</li>
+<li>使用 Rust 的套件管理工具暨建構系統 <code>cargo</code></li>
 </ul>
+<blockquote>
+<p>translators: [Ngô͘ Io̍k-ūi <a href="mailto:wusyong9104@gmail.com">wusyong9104@gmail.com</a>]
+commit: <a href="https://github.com/rust-lang/book/blob/1fedfc4b96c2017f64ecfcf41a0a07e2e815f24f/src/ch01-00-getting-started.md">1fedfc4</a>
+updated: 2020-09-05</p>
+</blockquote>
 
                     </main>
 
