--- a/ch01-02-hello-world.html
+++ b/ch01-02-hello-world.html
@@ -168,148 +168,89 @@
                 <div id="content" class="content">
                     <main>
                         <h2><a class="header" href="#hello-world" id="hello-world">Hello, World!</a></h2>
-<p>Now that you’ve installed Rust, let’s write your first Rust program. It’s
-traditional when learning a new language to write a little program that prints
-the text <code>Hello, world!</code> to the screen, so we’ll do the same here!</p>
+<p>現在你已經安裝好 Rust，讓我們開始來寫你的第一支 Rust 程式吧。當我們學習一門新的語言時，有一個習慣是寫一支印出「Hello, world!」到螢幕上的小程式，此章節將教你做一樣的事！</p>
 <blockquote>
-<p>Note: This book assumes basic familiarity with the command line. Rust makes
-no specific demands about your editing or tooling or where your code lives, so
-if you prefer to use an integrated development environment (IDE) instead of
-the command line, feel free to use your favorite IDE. Many IDEs now have some
-degree of Rust support; check the IDE’s documentation for details. Recently,
-the Rust team has been focusing on enabling great IDE support, and progress
-has been made rapidly on that front!</p>
+<p>注意：本書將預設你已經知道命令列最基本的使用方法。Rust 對於你的編輯器、工具以及程式碼位於何處沒有特殊的要求，所以如果你更傾向於使用整合開發環境（IDE）的話，請儘管使用你最愛的 IDE。許多 IDE 都已經針對 Rust 提供某種程度的支援，請查看你所使用的 IDE 技術文件以瞭解詳情。最近，Rust 團隊正在積極專注在提升 IDE 的支援，而且進展十分迅速且出色！</p>
 </blockquote>
-<h3><a class="header" href="#creating-a-project-directory" id="creating-a-project-directory">Creating a Project Directory</a></h3>
-<p>You’ll start by making a directory to store your Rust code. It doesn’t matter
-to Rust where your code lives, but for the exercises and projects in this book,
-we suggest making a <em>projects</em> directory in your home directory and keeping all
-your projects there.</p>
-<p>Open a terminal and enter the following commands to make a <em>projects</em> directory
-and a directory for the “Hello, world!” project within the <em>projects</em> directory.</p>
-<p>For Linux, macOS, and PowerShell on Windows, enter this:</p>
+<h3><a class="header" href="#建立專案目錄" id="建立專案目錄">建立專案目錄</a></h3>
+<p>你將先建立一個目錄來儲存你的 Rust 程式碼。程式碼位於何處並不重要，但爲了能好好練習書中的範例和專案，我們建議你可以在你的 home 目錄建立一個 <em>projects</em> 目錄然後將你所有的專案保存在此。</p>
+<p>請開啓終端機然後輸入以下命令來建立 <em>projects</em> 目錄和另一個在 <em>projects</em> 目錄底下的真正要寫「Hello, world!」專案的目錄。</p>
+<p>對於 Linux、macOS 和 Windows 的 PowerShell，請輸入：</p>
 <pre><code class="language-console">$ mkdir ~/projects
 $ cd ~/projects
 $ mkdir hello_world
 $ cd hello_world
 </code></pre>
-<p>For Windows CMD, enter this:</p>
+<p>對於 Windows CMD，請輸入：</p>
 <pre><code class="language-cmd">&gt; mkdir &quot;%USERPROFILE%\projects&quot;
 &gt; cd /d &quot;%USERPROFILE%\projects&quot;
 &gt; mkdir hello_world
 &gt; cd hello_world
 </code></pre>
-<h3><a class="header" href="#writing-and-running-a-rust-program" id="writing-and-running-a-rust-program">Writing and Running a Rust Program</a></h3>
-<p>Next, make a new source file and call it <em>main.rs</em>. Rust files always end with
-the <em>.rs</em> extension. If you’re using more than one word in your filename, use
-an underscore to separate them. For example, use <em>hello_world.rs</em> rather than
-<em>helloworld.rs</em>.</p>
-<p>Now open the <em>main.rs</em> file you just created and enter the code in Listing 1-1.</p>
+<h3><a class="header" href="#編寫並執行-rust-程式" id="編寫並執行-rust-程式">編寫並執行 Rust 程式</a></h3>
+<p>接著，請產生一個原始文件並叫做 <em>main.rs</em>。Rust 的文件檔案都會以 <em>.rs</em> 副檔名稱作爲結尾。如果你用到不止一個單字的話，請用底線區隔開來。比方說，請使用 <em>hello_world.rs</em> 而不是 <em>helloworld.rs</em>。</p>
+<p>現在請開啓 <em>main.rs</em> 文件然而後輸入範例 1-1 中的程式碼。</p>
 <p><span class="filename">Filename: main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
     println!(&quot;Hello, world!&quot;);
 }
 </code></pre></pre>
-<p><span class="caption">Listing 1-1: A program that prints <code>Hello, world!</code></span></p>
-<p>Save the file and go back to your terminal window. On Linux or macOS, enter
-the following commands to compile and run the file:</p>
+<p><span class="caption">範例 1-1：印出「Hello, world!」的程式</span></p>
+<p>儲存檔案然後回到你的終端機螢幕。在 Linux 或 macOS 上，請輸入以下命令來編譯並執行檔案：</p>
 <pre><code class="language-console">$ rustc main.rs
 $ ./main
 Hello, world!
 </code></pre>
-<p>On Windows, enter the command <code>.\main.exe</code> instead of <code>./main</code>:</p>
+<p>在 Windows 上則輸入 <code>.\main.exe</code> 而非 <code>./main</code>：</p>
 <pre><code class="language-powershell">&gt; rustc main.rs
 &gt; .\main.exe
 Hello, world!
 </code></pre>
-<p>Regardless of your operating system, the string <code>Hello, world!</code> should print to
-the terminal. If you don’t see this output, refer back to the
-<a href="ch01-01-installation.html#troubleshooting">“Troubleshooting”</a><!-- ignore --> part of the Installation
-section for ways to get help.</p>
-<p>If <code>Hello, world!</code> did print, congratulations! You’ve officially written a Rust
-program. That makes you a Rust programmer—welcome!</p>
-<h3><a class="header" href="#anatomy-of-a-rust-program" id="anatomy-of-a-rust-program">Anatomy of a Rust Program</a></h3>
-<p>Let’s review in detail what just happened in your “Hello, world!” program.
-Here’s the first piece of the puzzle:</p>
+<p>不管你的作業系統維和，終端機上應該都會出現 <code>Hello, world!</code>。如果你沒有看到，可以回到安裝章節中的<a href="ch01-01-installation.html#troubleshooting">「疑難排除」</a>尋求協助。</p>
+<p>如果 <code>Hello, world!</code> 有印出來，那麼恭喜你！你正式寫了一支 Rust 程式，所以你也正式成爲 Rust 開發者——歡迎加入！</p>
+<h3><a class="header" href="#分析這支-rust-程式" id="分析這支-rust-程式">分析這支 Rust 程式</a></h3>
+<p>讓我們來仔細瞧瞧你的「Hello, world!」程式實際上發生了什麼事。這是第一塊拼圖：</p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
 
 }
 </code></pre></pre>
-<p>These lines define a function in Rust. The <code>main</code> function is special: it is
-always the first code that runs in every executable Rust program. The first
-line declares a function named <code>main</code> that has no parameters and returns
-nothing. If there were parameters, they would go inside the parentheses, <code>()</code>.</p>
-<p>Also, note that the function body is wrapped in curly brackets, <code>{}</code>. Rust
-requires these around all function bodies. It’s good style to place the opening
-curly bracket on the same line as the function declaration, adding one space in
-between.</p>
-<p>At the time of this writing, an automatic formatter tool called <code>rustfmt</code> is
-under development. If you want to stick to a standard style across Rust
-projects, <code>rustfmt</code> will format your code in a particular style. The Rust team
-plans to eventually include this tool with the standard Rust distribution, like
-<code>rustc</code>. So depending on when you read this book, it might already be installed
-on your computer! Check the online documentation for more details.</p>
-<p>Inside the <code>main</code> function is the following code:</p>
+<p>這幾行在 Rust 中定義了一個函式。<code>main</code> 是一個特別的函式：它是每個可執行的 Rust 程式永遠第一個執行的程式碼。第一行宣告了一個函式 <code>main</code>，它沒有參數也不回傳任何東西。如果有參數的話，它們會被加進括號 <code>()</code> 內。</p>
+<p>再來，請注意到函式本體被囊括在大括號 <code>{}</code> 內，Rust 要求所有函式都用大括號包起來。一般來說，良好的程式碼風格會要求將前大括號置於宣告函式的同一行，並用一個空格區隔開來。</p>
+<p>在本書撰寫的期間，有一支自動格式化的工具叫做 <code>rustfmt</code> 正在開發中。如果你想要在不同 Rust 專案之間統一標準風格的話，<code>rustfmt</code> 可以格式化你的程式成特定的風格。Rust 團隊計劃最終將此工具納入標準 Rust 發行版中，就像 <code>rustc</code> 一樣。所以依照你閱讀此書的時間點，它很可能已經安裝到你的電腦上了！請查看線上技術文件以瞭解詳情。</p>
+<p>在 <code>main</code> 函式內有以下程式碼：</p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
 </span>    println!(&quot;Hello, world!&quot;);
 <span class="boring">}
 </span></code></pre></pre>
-<p>This line does all the work in this little program: it prints text to the
-screen. There are four important details to notice here.</p>
-<p>First, Rust style is to indent with four spaces, not a tab.</p>
-<p>Second, <code>println!</code> calls a Rust macro. If it called a function instead, it
-would be entered as <code>println</code> (without the <code>!</code>). We’ll discuss Rust macros in
-more detail in Chapter 19. For now, you just need to know that using a <code>!</code>
-means that you’re calling a macro instead of a normal function.</p>
-<p>Third, you see the <code>&quot;Hello, world!&quot;</code> string. We pass this string as an argument
-to <code>println!</code>, and the string is printed to the screen.</p>
-<p>Fourth, we end the line with a semicolon (<code>;</code>), which indicates that this
-expression is over and the next one is ready to begin. Most lines of Rust code
-end with a semicolon.</p>
-<h3><a class="header" href="#compiling-and-running-are-separate-steps" id="compiling-and-running-are-separate-steps">Compiling and Running Are Separate Steps</a></h3>
-<p>You’ve just run a newly created program, so let’s examine each step in the
-process.</p>
-<p>Before running a Rust program, you must compile it using the Rust compiler by
-entering the <code>rustc</code> command and passing it the name of your source file, like
-this:</p>
+<p>此行負責了整支程式要做的事：它將文字顯示在螢幕上。這邊有四個細節要注意。</p>
+<p>首先，Rust 的排版風格是 4 個空格而非一個 tab。</p>
+<p>第二，<code>println!</code> 會呼叫一支 Rust 巨集（macro）。如果是呼叫函式的話，那則會是 <code>println</code>（去掉 <code>!</code>）。我們會在第 19 章討論更多巨集的細節。現在你只需要知道使用 <code>!</code> 代表呼叫一支巨集而非一個正常的函式。</p>
+<p>第三，<code>&quot;Hello, world!&quot;</code> 是一個字串，我們將此字串作爲引數傳遞給 <code>println!</code>，然後該字串就會被顯示到螢幕上。</p>
+<p>第四，我們用分號（<code>;</code>）作爲該行結尾，代表此表達式的結束和下一個表達式的開始。多數的 Rust 程式碼都以分號做結尾。</p>
+<h3><a class="header" href="#編譯和執行是不同的步驟" id="編譯和執行是不同的步驟">編譯和執行是不同的步驟</a></h3>
+<p>你剛剛執行了一個薪建立的程式，讓我們來檢查過程中的每一個步驟吧。</p>
+<p>在你執行一支 Rust 程式前，你必須用 Rust 編譯器來編譯它，也就是輸入 <code>rustc</code> 命令然後加上你的原始文件，像這樣子：</p>
 <pre><code class="language-console">$ rustc main.rs
 </code></pre>
-<p>If you have a C or C++ background, you’ll notice that this is similar to <code>gcc</code>
-or <code>clang</code>. After compiling successfully, Rust outputs a binary executable.</p>
-<p>On Linux, macOS, and PowerShell on Windows, you can see the executable by
-entering the <code>ls</code> command in your shell. On Linux and macOS, you’ll see two
-files. With PowerShell on Windows, you’ll see the same three files that you
-would see using CMD.</p>
+<p>如果你已經有 C 或 C++ 的背景，你應該就會發現這和 <code>gcc</code> 或 <code>clang</code> 非常相似。編譯成功後，Rust 編譯器會輸出一個二進制執行檔（binary executable）。</p>
+<p>在 Linux、macOS 和 Windows 上的 PowerShell，你可以在你的 shell 輸入 <code>ls</code> 來查看你的執行檔。在 Linux 和 macOS，你會看到兩個檔案。而在 Windows 上的 PowerShell，你會和使用 CMD 一樣看到三個檔案。</p>
 <pre><code class="language-text">$ ls
 main  main.rs
 </code></pre>
-<p>With CMD on Windows, you would enter the following:</p>
+<p>在 Windows 上的 CMD，你需要輸入：</p>
 <pre><code class="language-cmd">&gt; dir /B %= the /B option says to only show the file names =%
 main.exe
 main.pdb
 main.rs
 </code></pre>
-<p>This shows the source code file with the <em>.rs</em> extension, the executable file
-(<em>main.exe</em> on Windows, but <em>main</em> on all other platforms), and, when using
-Windows, a file containing debugging information with the <em>.pdb</em> extension.
-From here, you run the <em>main</em> or <em>main.exe</em> file, like this:</p>
+<p>這顯示了副檔名爲 <em>.rs</em>  的原始程式碼檔案、執行檔（在 Winddows 上爲 <em>main.exe</em>；其他則爲 <em>main</em>），然後在 Windows 上會再出現一個副檔名爲 <em>.pdb</em> 的除錯資訊文件。在這裡，你就可以像這樣執行 <em>main</em> 或 <em>main.exe</em> 檔案：</p>
 <pre><code class="language-console">$ ./main # or .\main.exe on Windows
 </code></pre>
-<p>If <em>main.rs</em> was your “Hello, world!” program, this line would print <code>Hello, world!</code> to your terminal.</p>
-<p>If you’re more familiar with a dynamic language, such as Ruby, Python, or
-JavaScript, you might not be used to compiling and running a program as
-separate steps. Rust is an <em>ahead-of-time compiled</em> language, meaning you can
-compile a program and give the executable to someone else, and they can run it
-even without having Rust installed. If you give someone a <em>.rb</em>, <em>.py</em>, or
-<em>.js</em> file, they need to have a Ruby, Python, or JavaScript implementation
-installed (respectively). But in those languages, you only need one command to
-compile and run your program. Everything is a trade-off in language design.</p>
-<p>Just compiling with <code>rustc</code> is fine for simple programs, but as your project
-grows, you’ll want to manage all the options and make it easy to share your
-code. Next, we’ll introduce you to the Cargo tool, which will help you write
-real-world Rust programs.</p>
+<p>如果 <em>main.rs</em> 正是你的 “Hello, world!” 程式，這命令就會顯示 <code>Hello, world!</code> 到你的終端機。</p>
+<p>如果你比叫熟悉動態語言，像是 Ruby、Python 或 JavaScript，你可能會比較不習慣將編譯與執行程式分爲兩個不同的步驟。Rust 是一門 <em>預先編譯（ahead-of-time compiled）</em> 的語言，代表你可以編譯完成後將執行檔送到其他地方，然後他們就算沒有安裝 Rust 一樣可以執行起來。但如果你給某個人 <em>.rb</em>、<em>.py</em> 或 <em>.js</em> 檔案，他們就需要 Ruby、Python 或 Javascript 分別都有安裝好。當然你在這些語言只需要一行命令就可以執行，在語言設計中這一切都只是取捨。</p>
+<p>在簡單的程式使用 <code>rustc</code> 來編譯不會有什麼問題，但當你的專案成長時，你將會需要管理所有選擇並讓程式碼易於分享。接下來我們將介紹 Cargo 這項工具給你，它將協助你寫出真正的 Rust 程式。</p>
 
                     </main>
 
