deploy: 99f3ef5be9b82798f3de9ae2a1a441f68fcf4552

--- a/appendix-08-terminology.html
+++ b/appendix-08-terminology.html
@@ -226,6 +226,7 @@
 <tr><td>iterator</td><td>疊代器</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E8%BF%AD%E4%BB%A3%E5%99%A8">維基百科</a></td></tr>
 <tr><td>immutable</td><td>不可變</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E4%B8%8D%E5%8F%AF%E8%AE%8A%E7%89%A9%E4%BB%B6">維基百科</a></td></tr>
 <tr><td>inheritance</td><td>繼承　</td><td></td></tr>
+<tr><td>keyword</td><td>關鍵字</td><td></td></tr>
 <tr><td>language feature</td><td>語言特徵</td><td>參考：<a href="http://www.iicm.org.tw/term/termb_L.htm">中華民國資訊學會</a></td></tr>
 <tr><td>library</td><td>函式庫</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E5%87%BD%E5%BC%8F%E5%BA%AB">維基百科</a></td></tr>
 <tr><td>lifetimes</td><td>生命週期</td><td></td></tr>
