--- a/ch03-00-common-programming-concepts.html
+++ b/ch03-00-common-programming-concepts.html
@@ -167,24 +167,19 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#common-programming-concepts" id="common-programming-concepts">Common Programming Concepts</a></h1>
-<p>This chapter covers concepts that appear in almost every programming language
-and how they work in Rust. Many programming languages have much in common at
-their core. None of the concepts presented in this chapter are unique to Rust,
-but we’ll discuss them in the context of Rust and explain the conventions
-around using these concepts.</p>
-<p>Specifically, you’ll learn about variables, basic types, functions, comments,
-and control flow. These foundations will be in every Rust program, and learning
-them early will give you a strong core to start from.</p>
+                        <h1><a class="header" href="#常見程式設計概念" id="常見程式設計概念">常見程式設計概念</a></h1>
+<p>此章節涵蓋了幾乎所有程式語言都會出現的概念，以及如何在 Rust 使用。許多程式語言的核心概念都是相同的，所以此章節所介紹的概念也不是 Rust 所特有的。不過我們會用 Rust 的程式碼來討論它們，並解釋使用這些概念的慣例。</p>
+<p>更明確來說，你將會學習到變數、基本型別、註釋以及控制流。這些基本概念會出現在每個 Rust 程式中，所以提早學習這些概念可以爲你打下穩健的基礎。</p>
 <blockquote>
-<h4><a class="header" href="#keywords" id="keywords">Keywords</a></h4>
-<p>The Rust language has a set of <em>keywords</em> that are reserved for use by
-the language only, much as in other languages. Keep in mind that you cannot
-use these words as names of variables or functions. Most of the keywords have
-special meanings, and you’ll be using them to do various tasks in your Rust
-programs; a few have no current functionality associated with them but have
-been reserved for functionality that might be added to Rust in the future. You
-can find a list of the keywords in <a href="appendix-01-keywords.html">Appendix A</a>.</p>
+<h4><a class="header" href="#關鍵字keywords" id="關鍵字keywords">關鍵字（Keywords）</a></h4>
+<p>Rust 程式語言和其他語言一樣會保留一系列的 <em>關鍵字（keywords）</em>。請注意你將無法用這些字作爲變數或函式名稱。大多數關鍵字都有特別意義，而你將會在你的 Rust 程式使用它們在做不同的任務；而有一些目前則還沒有任何用途，但是在未來可能會被 Rust 加入所以作爲保留。你可以在<a href="appendix-01-keywords.html">附錄 A</a> 查看關鍵字列表。</p>
+</blockquote>
+<blockquote>
+<ul>
+<li>translators: [Ngô͘ Io̍k-ūi <a href="mailto:wusyong9104@gmail.com">wusyong9104@gmail.com</a>]</li>
+<li>commit: <a href="https://github.com/rust-lang/book/blob/f5a00f4d5107d5e69f556dcae9e91685c9f414d8/src/ch03-00-common-programming-concepts.md">f5a00f4</a></li>
+<li>updated: 2020-09-05</li>
+</ul>
 </blockquote>
 
                     </main>
